# nitpick-senior

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  pyproject.toml  summary.md
.github/: ai-reviewer.md.example
.github/workflows/: publish-image.yml  test-action.yml
docs/: ARCHITECTURE.md  PROVIDERS.md  azure-devops.md  bitbucket.md  github.md  gitlab.md  static-analysis.md
presentation/: comparison-data.md  findings.md  index.html  styles.css
presentation/blind-review/: pr21-reviews.md  pr27-reviews.md  pr4-reviews.md
src/: config.py  constants.py  main.py  vulnerable_demo.py
src/context/: __init__.py  collector.py  models.py
src/context/extractors/: __init__.py  files.py  imports.py  static_analysis.py
src/examples/: vulnerable_code.py
src/github/: __init__.py  client.py  comments.py  diff.py
src/llm/: __init__.py  client.py  enhanced_response.py  response.py
src/prompts/: __init__.py  defaults.py  enhanced.py  loader.py
src/providers/: __init__.py  azure_devops.py  base.py  bitbucket.py  config.py  factory.py  github.py  gitlab.py  protocol.py
src/review/: __init__.py  analyzer.py  chunker.py  comments.py  formatters.py
src/utils/: __init__.py  env.py  tokens.py
tests/: __init__.py  test_comments.py  test_config.py  test_imports.py  test_static_analysis.py  test_tokens.py
tests/providers/: test_azure_devops.py  test_bitbucket.py  test_factory.py  test_github.py  test_gitlab.py  test_protocol.py
