[project]
name = "ai-pr-reviewer"
version = "1.0.0"
description = "AI-powered code review for pull requests"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40.0",
    "PyGithub>=2.3.0",
    "pydantic>=2.0.0",
    "unidiff>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
